Fix line breaks in authors column of web app table
We build each author's string in back end endpoint, and concatenate
them inside divs in frontend using JSX.

--- a/webapp/client/src/BookTable.css
+++ b/webapp/client/src/BookTable.css
@@ -53,7 +53,7 @@ th#title {
   width: 550px;
 }
 
-th#authorString {
+th#authors {
   width: 200px;
 }
 
